<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="MeasuringData" Id="{53ebf6b3-fc8a-4c89-a956-c998e4ef1fe8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	AutomaticMode : BOOL;		
	StartConveyor : BOOL;	
	StopConveyor : BOOL;		
	ItemInTheSystem : BOOL; //If there is an item in the system
	ItemInTheSystemOnHmi : BOOL := TRUE; //If the variable true the text is invisible
	TableAtHome : BOOL;		
	TableAtBin1 : BOOL;		
	TableAtBin2 : BOOL;		
	TableAtBin3 : BOOL;		
	TableAtBin4 : BOOL;		
	ES1NC : BOOL := TRUE; //Emergency button for simulation
	ES2NC : BOOL := TRUE; //Emergency button for simulation
	ControlSupplyOK : BOOL; //Control 24V for simulation
	ControlSupplyOKOnHmi : BOOL := TRUE; //If the variable true the text is invisible
	SizeInCm : REAL;		
	MetalMaterial : BOOL;		
	WeightInKg : REAL;	
	Bin1Breed : BOOL; //Small and non metal
	Bin2Breed : BOOL; //Small and metal
	Bin3Breed : BOOL; //Large and not metal
	Bin4Breed : BOOL; //Large and metal
	Bin1BreedOnHmi : BOOL := TRUE; //If the variable true the text is invisible
	Bin2BreedOnHmi : BOOL := TRUE; //If the variable true the text is invisible
	Bin3BreedOnHmi : BOOL := TRUE; //If the variable true the text is invisible
	Bin4BreedOnHmi : BOOL := TRUE; //If the variable true the text is invisible
	HomePosition : LREAL;	
	Bin1Position : LREAL := 30.0;		
	Bin2Position : LREAL := 60.0;		
	Bin3Position : LREAL := 90.0;		
	Bin4Position : LREAL := 120.0;	
	MoveToBin1PositionByManual : BOOL;		
	MoveToBin2PositionByManual : BOOL;		
	MoveToBin3PositionByManual : BOOL;		
	MoveToBin4PositionByManual : BOOL;		
	MoveToHomeByManual : BOOL;		
	SaveNewPositionOfBin1 : BOOL;	
	SaveNewPositionOfBin2 : BOOL;		
	SaveNewPositionOfBin3 : BOOL;		
	SaveNewPositionOfBin4 : BOOL;		

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>