<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="BreedCalculation" Id="{a45dfa7e-50d0-46f2-8d49-26b35c643089}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION BreedCalculation
VAR_INPUT
END_VAR
VAR

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
//Small and non metal. Bin1 breed
IF (MAIN.sizeMeasure.sizeInCm >= 10.0 AND MAIN.sizeMeasure.sizeInCm <= 20.0 AND MAIN.weightMeasure.weightInKg <= 5.0 AND
	NOT MeasuringData.MetalMaterial) THEN
	MeasuringData.Bin1Breed := TRUE;
	MeasuringData.Bin2Breed := FALSE;
	MeasuringData.Bin3Breed := FALSE;
	MeasuringData.Bin4Breed := FALSE;
	//Variables on the HMI
	MeasuringData.Bin1BreedOnHmi := FALSE;
	MeasuringData.Bin2BreedOnHmi := TRUE;
	MeasuringData.Bin3BreedOnHmi := TRUE;
	MeasuringData.Bin4BreedOnHmi := TRUE;
END_IF

//Small and metal. Bin2 breed
IF (MAIN.sizeMeasure.sizeInCm >= 10.0 AND MAIN.sizeMeasure.sizeInCm <= 20.0 AND MAIN.weightMeasure.weightInKg <= 5.0 AND
	MeasuringData.MetalMaterial) THEN
	MeasuringData.Bin1Breed := FALSE;
	MeasuringData.Bin2Breed := TRUE;
	MeasuringData.Bin3Breed := FALSE;
	MeasuringData.Bin4Breed := FALSE;
	//Variables on the HMI
	MeasuringData.Bin1BreedOnHmi := TRUE;
	MeasuringData.Bin2BreedOnHmi := FALSE;
	MeasuringData.Bin3BreedOnHmi := TRUE;
	MeasuringData.Bin4BreedOnHmi := TRUE;
END_IF

//Large and non metal. Bin3 breed
IF (MAIN.sizeMeasure.sizeInCm >= 20.0 AND MAIN.weightMeasure.weightInKg >= 5.1 AND
	NOT MeasuringData.MetalMaterial) THEN
	MeasuringData.Bin1Breed := FALSE;
	MeasuringData.Bin2Breed := FALSE;
	MeasuringData.Bin3Breed := TRUE;
	MeasuringData.Bin4Breed := FALSE;
	//Variables on the HMI
	MeasuringData.Bin1BreedOnHmi := TRUE;
	MeasuringData.Bin2BreedOnHmi := TRUE;
	MeasuringData.Bin3BreedOnHmi := FALSE;
	MeasuringData.Bin4BreedOnHmi := TRUE;
END_IF

//Large and metal. Bin4 breed
IF (MAIN.sizeMeasure.sizeInCm >= 20.0 AND MAIN.weightMeasure.weightInKg >= 5.1 AND
	MeasuringData.MetalMaterial) THEN
	MeasuringData.Bin1Breed := FALSE;
	MeasuringData.Bin2Breed := FALSE;
	MeasuringData.Bin3Breed := FALSE;
	MeasuringData.Bin4Breed := TRUE;
	//Variables on the HMI
	MeasuringData.Bin1BreedOnHmi := TRUE;
	MeasuringData.Bin2BreedOnHmi := TRUE;
	MeasuringData.Bin3BreedOnHmi := TRUE;
	MeasuringData.Bin4BreedOnHmi := FALSE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="BreedCalculation">
      <LineId Id="48" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="13" Count="1" />
      <LineId Id="16" Count="2" />
      <LineId Id="55" Count="0" />
      <LineId Id="57" Count="2" />
      <LineId Id="56" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="20" Count="7" />
      <LineId Id="61" Count="3" />
      <LineId Id="60" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="29" Count="7" />
      <LineId Id="66" Count="3" />
      <LineId Id="65" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="38" Count="7" />
      <LineId Id="71" Count="3" />
      <LineId Id="70" Count="0" />
      <LineId Id="37" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>