<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="SaveNewBinPosition" Id="{3e015298-61f8-4e0a-a10f-f01c34e186b9}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION SaveNewBinPosition
VAR_INPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//New position of bin1
IF MeasuringData.SaveNewPositionOfBin1 THEN
	MeasuringData.Bin1Position := MAIN.AxisControl.ActualPosition;
END_IF
//New position of bin2
IF MeasuringData.SaveNewPositionOfBin2 THEN
	MeasuringData.Bin2Position := MAIN.AxisControl.ActualPosition;
END_IF
//New position of bin3
IF MeasuringData.SaveNewPositionOfBin3 THEN
	MeasuringData.Bin3Position := MAIN.AxisControl.ActualPosition;
END_IF
//New position of bin4
IF MeasuringData.SaveNewPositionOfBin4 THEN
	MeasuringData.Bin4Position := MAIN.AxisControl.ActualPosition;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="SaveNewBinPosition">
      <LineId Id="7" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="15" Count="1" />
      <LineId Id="8" Count="0" />
      <LineId Id="18" Count="1" />
      <LineId Id="12" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="20" Count="1" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="24" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>