<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="ServoManualMotion" Id="{d49eda9a-fd3f-47a2-9d2d-6548127ba3fc}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION ServoManualMotion
VAR_INPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Move to home
IF  NOT MeasuringData.AutomaticMode AND MeasuringData.MoveToHomeByManual THEN
	MAIN.AxisControl(ExecuteHomeByManual := TRUE);
ELSE
	MAIN.AxisControl(ExecuteHomeByManual := FALSE);
END_IF

//Move to bin1, bin2, bin3, bin4
IF NOT MeasuringData.AutomaticMode AND MeasuringData.MoveToBin1PositionByManual THEN
		MAIN.AxisControl(AbsolutePosition := MeasuringData.Bin1Position);
	ELSIF NOT MeasuringData.AutomaticMode AND MeasuringData.MoveToBin2PositionByManual THEN
		MAIN.AxisControl(AbsolutePosition := MeasuringData.Bin2Position);
	ELSIF NOT MeasuringData.AutomaticMode AND MeasuringData.MoveToBin3PositionByManual THEN
		MAIN.AxisControl(AbsolutePosition := MeasuringData.Bin3Position);
	ELSIF NOT MeasuringData.AutomaticMode AND MeasuringData.MoveToBin4PositionByManual THEN
		MAIN.AxisControl(AbsolutePosition := MeasuringData.Bin4Position);
	ELSE
		MAIN.AxisControl(AbsolutePosition := 0.0);
END_IF


//If one of the button is clicked on the HMI
IF (NOT MeasuringData.AutomaticMode AND MeasuringData.MoveToBin1PositionByManual) OR
	(NOT MeasuringData.AutomaticMode AND MeasuringData.MoveToBin2PositionByManual) OR
	(NOT MeasuringData.AutomaticMode AND MeasuringData.MoveToBin3PositionByManual) OR
	(NOT MeasuringData.AutomaticMode AND MeasuringData.MoveToBin4PositionByManual) THEN
	MAIN.AxisControl(ExecuteMoveAbsoluteByManual := TRUE);
ELSE
	MAIN.AxisControl(ExecuteMoveAbsoluteByManual := FALSE);
END_IF]]></ST>
    </Implementation>
    <LineIds Name="ServoManualMotion">
      <LineId Id="7" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="24" Count="1" />
      <LineId Id="23" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="64" Count="7" />
      <LineId Id="61" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="47" Count="4" />
      <LineId Id="46" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>